2010-06-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/port.h,
	  src/SDCCpeeph.c,
	  src/mcs51/main.c,
	  src/pic/main.c,
	  src/z80/peep.h,
	  src/z80/main.c,
	  src/z80/peep.c,
	  src/z80/peeph-z80.def,
	  src/pic16/main.c,
	  src/hc08/main.c,
	  src/ds390/main.c:
	  Added canAssign() for use in peepholes.

2010-06-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/mappings.i,
	  src/z80/peeph-gbz80.def:
	  Move generation of short jumps into peepholes.

2010-06-05 Borut Razem <borut.razem AT siol.net>

	* device/include/asm/pic16/features.h, device/include/pic16/*.h,
	  device/include/pic16/pic16devices.txt,
	  device/include/pic16/p18fxxx.inc, device/lib/pic16/libsdcc/*.c:
	  sdcc library license changed to GPL+LE

2010-06-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asranlib/asranlib.c (do_ranlib): fixed text output
	* src/SDCCerr.c,
	* src/SDCCerr.h,
	* src/SDCC.y: changed E_STORAGE_CLASS_SPECIFIED_FOR_PARAMETER to
	    E_STORAGE_CLASS_FOR_PARAMETER
	* src/SDCCcse.c,
	* src/SDCCdflow.c,
	* src/SDCCval.c: cosmetic changes
	* src/SDCCopt.c,
	* src/SDCCsymt.c,
	* src/SDCCsymt.h: removed double underscores from function names,
	    fixed bug 3005305

2010-06-03 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/_memcpy,
	  device/lib/_memmove.c:
	  Library cleanup.

2010-06-02 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: corrected z80 assembler name, corrected revision
	  date format

2010-06-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Optimization of multibyte comparison.
	* src/SDCCpeeph.c,
	  src/SDCCpeeph.h,
	  src/z80/peeph-z80.def:
	  Peephole barriers, fixes #1677178.

2010-05-31 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/simi.c, debugger/mcs51/cmd.c, debugger/mcs51/sdcdb.c,
	  debugger/mcs51/sdcdb.h: enhanced help text formating, added usage
	  (-h, -?, --help) and verbose (-v) command line options, SDCDB_VERSION
	  bumped to 0.9